Fixed subpage CSS, logo path and layout issue

--- a/style.css
+++ b/style.css
@@ -337,11 +337,7 @@ header {
     align-items: center;
 }
 
-.logo {
-    font-size: 1.6rem;
-    font-weight: 600;
-    color: #fff;
-}
+
 
 nav ul {
     display: flex;
